--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -19,12 +19,12 @@
   <body>
       <div id="header">
         <nav>
-          <li class="navleftmost"><a href="https://benjaminlread.github.io/blr-sandbox/testpage.html">Home</a></li>
-          <li class="navleft"><a href="https://benjaminlread.github.io/blr-sandbox/testpage.html">About</a></li>
-          <li class="navleft"><a href="{{ site.github.repository_url }}">Research</a></li>
-          <li class="navleft"><a href="{{ site.github.repository_url }}">Commentary</a></li>
-          <li class="navleft"><a href="{{ site.github.repository_url }}">Teaching</a></li>
-          <li class="navleft"><a href="{{ site.github.repository_url }}">Tools</a></li>
+          <li class="navleftmost"><a href="https://benread.net">Home</a></li>
+          <li class="navleft"><a href="https://benread.net/about/about.html">About</a></li>
+          <li class="navleft"><a href="https://benread.net/research/research.html">Research</a></li>
+          <li class="navleft"><a href="https://benread.net/commentary/commentary.html">Commentary</a></li>
+          <li class="navleft"><a href="https://benread.net/teaching/teaching.html">Teaching</a></li>
+          <li class="navleft"><a href="https://benread.net/tools/tools.html">Tools</a></li>
         </nav>
       </div><!-- end header -->
 
