fixing nav bar links, http not https

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,12 +19,12 @@
   <body>
       <div id="header">
         <nav>
-          <li class="navleftmost"><a href="https://benread.net">Home</a></li>
-          <li class="navleft"><a href="https://benread.net/about/about.html">About</a></li>
-          <li class="navleft"><a href="https://benread.net/research/research.html">Research</a></li>
-          <li class="navleft"><a href="https://benread.net/commentary/commentary.html">Commentary</a></li>
-          <li class="navleft"><a href="https://benread.net/teaching/teaching.html">Teaching</a></li>
-          <li class="navleft"><a href="https://benread.net/tools/tools.html">Tools</a></li>
+          <li class="navleftmost"><a href="http://benread.net">Home</a></li>
+          <li class="navleft"><a href="http://benread.net/about/about.html">About</a></li>
+          <li class="navleft"><a href="http://benread.net/research/research.html">Research</a></li>
+          <li class="navleft"><a href="http://benread.net/commentary/commentary.html">Commentary</a></li>
+          <li class="navleft"><a href="http://benread.net/teaching/teaching.html">Teaching</a></li>
+          <li class="navleft"><a href="http://benread.net/tools/tools.html">Tools</a></li>
         </nav>
       </div><!-- end header -->
 
