--- a/about/brdnstyle-multicol.css
+++ b/about/brdnstyle-multicol.css
@@ -53,7 +53,7 @@ body {
   line-height: 13px; 
   font-family: Tahoma, Geneva, Arial, Helvetica, sans serif; 
   font-size: 8pt;
-  background: url(elements/bg2010.jpg) top left repeat-y;
+  background: url(bg2010.jpg) top left repeat-y;
   margin: 0px;
   padding: 0px;
 }
