--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,10 +35,14 @@
           <h1>{{ page.title }}</h1>
           <p>{{ page.subtitle }}</p>
           <hr>
-          <span class="credits right">Hosted on <a href="https://github.com/benjaminlread/benjaminlread">GitHub Pages</a>. Theme adapted with thanks from <a href="https://github.com/pages-themes/midnight">Midnight</a>.</span>
         </div>
 
         {{ content }}
+
+        <div id="footer_for_home">
+          <span class="credits right">Hosted on <a href="https://github.com/benjaminlread/benjaminlread">GitHub Pages</a>. Theme adapted with thanks from <a href="https://github.com/pages-themes/midnight">Midnight</a>.</span>
+        </div>
+
 
       </section>
 
