--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -318,7 +318,7 @@ section {
     #footer_for_home {
     border: 0;
     outline: none;
-    margin: 0 0 50px 0;
+    margin: 100px 0 50px 0;
     padding: 0 0 5px 0;
 
     .credits {
