blue link color

--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -50,12 +50,12 @@ h3 {
 }
 
 a {
-  color: #6a92f7;    /* was #ffcc00 */
+  color: #8eaeff;    /* was #ffcc00 */
   font-weight:400;
   text-decoration:none;
 
   &:hover {
-    color: #8eaeff ;  /* was #ffeb9b */
+    color: #a5bfff ;  /* was #ffeb9b */
   }
 }
 
