--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -184,12 +184,11 @@ dt {
 
       a {
         color: white;
-        border: 1px solid #5d910b;
-        background: linear_gradient(#93bd20, #659e10);
+        border: 1px solid #145434; /* Adds slight 3d effect */
         border-radius: 2px;
         box-shadow: inset 0px 1px 0px rgba(255,255,255,.3), 0px 3px 7px rgba(0,0,0,.7);
 
-        background-color: #5d910b; /* was #93bd20 */
+        background-color: #18633e;
         padding: 10px 12px;
         margin-top: 6px;
         line-height:16px;
@@ -198,9 +197,7 @@ dt {
         text-align:center;
 
         &:hover {
-          background: linear_gradient(#749619, #527f0e);
-          background-color: #659e10;
-          border: 1px solid #527f0e;
+          background-color: #196d43;
           box-shadow: inset 0px 1px 1px rgba(0,0,0,.2), 0px 1px 0px rgba(0,0,0,.0);
         }
       }
