--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -135,7 +135,7 @@ th {
 
 td {
   text-align:left;
-  font-size: 16px;
+  font-size: 18px; /* Made larger for traditional Chinese in table */
   padding:5px 10px;
   border-bottom:1px solid #434343;
 }
