--- a/_includes/analytics_old_before_2023.html
+++ b/_includes/analytics_old_before_2023.html
@@ -1,4 +1,4 @@
-<!-- Google tag (gtag.js) -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106134385-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
